@@ -1,6 +1,7 @@
 ===========================================================================
 5.5
 
+Fixed: TESTNG-127 UseDefaultListeners in Ant Task does not work
 Fixed: TESTNG-119 Running TestNG runner with invalid '-sourcedir' on JDK14 JavaDoc annotated test classes won't fail.
 Fixed: TESTNG-113 Dependent methods within the same static inner class are not found
 Fixed: TESTNG-125 TestNG failed for test classes under *.java*.* pakages
